Fix Cloud Crash: Remove Stpyvista

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas>=2.0.0
 numpy>=1.24.0
 plotly
 pyvista
-stpyvista
+# stpyvista # REMOVED
 # CPU-only Torch for Cloud Deployment (Smaller Size)
 torch --index-url https://download.pytorch.org/whl/cpu
 # System helpers
